--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
         </div>
   </div>
   <br />
-  <p class="right"><a href="#" class="a"><img class="docto" alt="doctolib" src="img/doctolib.jpg" /></p>
+  
+  <p class="right"><a href="https://www.doctolib.fr/psychologue/tarnos/charlotte-durand?utm_campaign=website-button&amp;utm_source=charlotte-durand-website-button&amp;utm_medium=referral&amp;utm_content=option-2&amp;utm_term=charlotte-durand" src="https://pro.doctolib.fr/external_button/doctolib-blue-transparent.png" alt="Doctolib"><img class="docto" alt="doctolib" src="img/doctolib.jpg" /></p>
   <a href="#" ><p class="absolute">- Psychologue clinicienne -<br />Charlotte Durand</p></a>
   <div class="container">
       <div id="pratique">
@@ -75,13 +76,13 @@
               </p>
               <p class="the addm">J'ai principalement exercé au sein d'institutions auprès d'enfants et d'adolescents ainsi qu'à l'hôpital. </p>
               <h4 class="under_title">MA FORMATION</h4>
-              <p class="the addm"><u>MASTER 2</u><i>"Psychopathologie clinique et psychanalyse" parcours "psychopathologie clinique infanto-juvénile et de la petite enfance" à l'université de Rennes 2.</i></p>   
-              <p class="the addm"><u>DIPLOME inter-universitaire</u><i>"Adolescents difficiles" à l'Université de Brest.</i></p>
-              <p class="the addm"><u>FORMATION QUALIFIANTE</u><i>"approche théorique et clinique de l'adoption"</i> aux études psychanalitiques de Paris 7 Paris Diderot</p>   
+              <p class="the addm"><u>MASTER 2</u><i>"Psychopathologie clinique et psychanalyse" </i>parcours<i>"psychopathologie clinique infanto-juvénile et de la petite enfance"</i> à l'université de Rennes 2.</p>   
+              <p class="the addm"><u>DIPLOME inter-universitaire</u><i>"Adolescents difficiles"</i> à l'Université de Brest.</p>
+              <p class="the addm"><u>FORMATION QUALIFIANTE</u><i>"approche théorique et clinique de l'adoption"</i> aux études psychanalytiques de Paris 7 Paris Diderot</p>   
               <p class="the addm"><u>FORMATION</u><i>"Les adolescents auteurs de violences sexuelles"</i> au CH Charles Perens, Bordeaux.</p>       
               <h4 class="under_title">UNE PRATIQUE ADAPTEE A CHACUN</h4>
               <p class="the addm">Formée à la psychanalyse, ma pratique s'appuie sur l'écoute et la singularité de la personne.</p>  
-              <p class="the addm">J'accueille avec neutralité et bienveillance toute personne en soufrance ou souhaitant une espace de parole à soi.</p>
+              <p class="the addm">J'accueille avec neutralité et bienveillance toute personne en souffrance ou souhaitant une espace de parole à soi.</p>
             </div>
         </div>
         <img class="rond trois none" alt="feuilles" src="img/menu.jpg" />
@@ -92,14 +93,14 @@
               <div class="flex">
                   <div class="child">
                       <h4 class="under_title">ENFANTS</h4>
-                      <p class="the addm">J'aide l'enfant qui manifeste des soucis d'ordre affectif, cognitif et / ou relationnel
-                        pour l'accompagner au mieux dans son développement. Le premier rendez-vous sera organisé avec les parents.
+                      <p class="the addm">J'aide l'enfant qui manifeste des difficultés d'ordre affectif, cognitif et / ou relationnel
+                        en l'accompagnant au mieux dans son développement. Avant de commencer le suivi, l'accord des deux parents sera nécessaire.
                       </p>
                   </div>
                   <div class="teenager">
                       <h4 class="under_title">ADOLESCENTS</h4>
                       <p class="the addm">J'accompagne tout jeune à s'exprimer et à mettre des mots sur sa souffrance. Je le soutiens psychologiquement pour qu'il
-                        puisse s'apaiser et se senter mieux.
+                        puisse s'apaiser et se sentir mieux.
                       </p>
                   </div>
                   <div class="adult">
@@ -114,7 +115,8 @@
               <div class="seance">
                   <h4 class="under_title">LA SEANCE</h4>
                   <p class="the within">La séance dure entre 30 et 50 minutes. Les honoraires sont de 50€. Les consulations ne sont pas prises en 
-                    compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.
+                    compte par la sécurité sociale. Je vous invite à vous renseigner auprès de votre mutuelle pour savoir si elle propose un remboursement.<br />
+                    Moyens de paiement: chèque, carte bancaire, espèces.
                   </p>
               </div>
             </div>
@@ -122,12 +124,11 @@
    
       <div id="cabinet">
         <br />
-        <h3 class="title more2">CABINET</h3>
+        <h3 class="title more2">LE CABINET</h3>
         <hr />
         <br />
         <div class="cab">
-            <p class="the">Le cabinet se situe dans le centre ville de Tarnos. Il dispose d'un parking souterrain gratuit sous l'immeuble. Il est accessible par la 
-              ligne 2 du Trambus ainsi que le bus (lignes 40 - 104 - 106). Arrêt "femmes d'un siècle"
+            <p class="the">Je vous accueille dans un cadre chaleureux et intimiste. L'espace a été adapté pour accueillir des enfants de tout âge ainsi que des adultes.
             </p>
             <div class="flex">
                 <div class="pic">
@@ -145,7 +146,7 @@
         <div class="flex">
             <div class="inner">
                 <h2 class="center the">Veuillez cliquer sur le logo ci-dessous pour prendre rendez-vous :</h2>
-                <p><a class="link" href="#"><img class="doctol" alt="lien doctolib" src="img/docto.jpg" /></a></p> 
+                <p><a class="link" href="https://www.doctolib.fr/psychologue/tarnos/charlotte-durand?utm_campaign=website-button&amp;utm_source=charlotte-durand-website-button&amp;utm_medium=referral&amp;utm_content=option-2&amp;utm_term=charlotte-durand" src="https://pro.doctolib.fr/external_button/doctolib-blue-transparent.png"><img class="doctol" alt="lien doctolib" src="img/docto.jpg" /></a></p> 
             </div>
             <div class="inner">
               <p class="font2 big3"><span><i class="fas fa-house-user"></i></span>
