--- a/index.html
+++ b/index.html
@@ -160,11 +160,13 @@
         <br />
         <div class="flex">
             <div class="inner">
-                <h2 class="center the">Veuillez cliquer sur le logo ci-dessous pour prendre rendez-vous :</h2>
+                <p><img class="telefon" src="img/tel.png" alt="telefon"/></p>
+                <h2 class="center the">Prise de rendez-vous par Doctolib ou au numéro <b>06 74 05 60 53 </b>:</h2>
                 <p><a class="link" href="https://www.doctolib.fr/psychologue/tarnos/charlotte-durand?utm_campaign=website-button&amp;utm_source=charlotte-durand-website-button&amp;utm_medium=referral&amp;utm_content=option-2&amp;utm_term=charlotte-durand" src="https://pro.doctolib.fr/external_button/doctolib-blue-transparent.png"><img class="doctol" alt="lien doctolib" src="img/docto.jpg" /></a></p> 
             </div>
             <div class="inner">
-              <p class="font2 big3"><span><i class="fas fa-house-user"></i></span>
+              <p class="font2 big3"><p><i class="fas fa-house-user"></i></p>
+              
                   <span class="inline_b">
                       <span class="contact the">Immeuble "Femmes d'un siècle" </span>
                       <br />
@@ -177,7 +179,7 @@
               </p> 
             </div>
               <div class="inner">
-                  <p class="font2 big3"><span><i class="fas fa-bus"></i></span>
+                  <p class="font2 big3"><p><i class="fas fa-bus"></i></p>
                       <span class="inline_b">
                           <span class="contact the">Trambus ligne 2 </span>
                           <br />
