--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
         <div class="flex">
             <div class="inner">
                 <p><img class="telefon" src="img/tel.png" alt="telefon"/></p>
-                <h2 class="center the">Prise de rendez-vous par Doctolib ou au numéro <b>06 74 05 60 53 </b>:</h2>
+                <h2 class="center the">Prise de rendez-vous par Doctolib ou au <b>06 74 05 60 53 </b>:</h2>
                 <p><a class="link" href="https://www.doctolib.fr/psychologue/tarnos/charlotte-durand?utm_campaign=website-button&amp;utm_source=charlotte-durand-website-button&amp;utm_medium=referral&amp;utm_content=option-2&amp;utm_term=charlotte-durand" src="https://pro.doctolib.fr/external_button/doctolib-blue-transparent.png"><img class="doctol" alt="lien doctolib" src="img/docto.jpg" /></a></p> 
             </div>
             <div class="inner">
