--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
                 <div class="adresse">
                     <p>40220 TARNOS</p>
                     <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
-                </div>  
+                </div> 
+                <img class="rond trois smaller_pic" alt="feuilles" src="img/menu.jpg" /> 
             </div>
         </div>
   </div>
