--- a/index.html
+++ b/index.html
@@ -112,6 +112,7 @@
                       </p>
                   </div>
               </div>
+              
               <br />
            
               <div class="seance">
@@ -122,6 +123,7 @@
                   </p>
               </div>
             </div>
+            <img class="rond trois none" alt="feuilles" src="img/menu.jpg" />
       </div>
    
       <div id="cabinet">
@@ -154,7 +156,7 @@
           </div>
       </div>
     </div>
-  
+    <img class="rond trois none" alt="feuilles" src="img/menu.jpg" />
       <div id="contact">
         <h3 class="title more_contact">CONTACT</h3>
         <hr />
