--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     <p>40220 TARNOS</p>
                     <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
                 </div> 
-                <img class="rond trois smaller_pic" alt="feuilles" src="img/menu.jpg" /> 
+                <img class="rond trois smaller_pic none" alt="feuilles" src="img/menu.jpg" /> 
             </div>
         </div>
   </div>
