--- a/index.html
+++ b/index.html
@@ -141,17 +141,14 @@
               <a href="#barre" class="control_prev"><</a>
               <ul>
                   <li>
-                      <img src="img/photo1.jpeg" alt="photo1" />
+                      <img src="img/bureau_front.jpeg" alt="photo1" />
                   </li>
                   <li>
-                      <img src="img/photo2.jpeg" alt="photo2" />
-                  </li>
-                  <li>
-                      <img src="img/photo3.jpeg" alt="photo3" />
+                      <img src="img/table_profil.jpeg" alt="photo5" />
                   </li> 
                   <li>
-                      <img src="img/photo4.jpeg" alt="photo4" />
-                  </li>  
+                      <img src="img/table.jpeg" alt="photo6" />
+                  </li> 
               </ul>  
           </div>
       </div>
