--- a/index.html
+++ b/index.html
@@ -141,14 +141,20 @@
               <a href="#barre" class="control_prev"><</a>
               <ul>
                   <li>
-                      <img src="img/bureau_front.jpeg" alt="photo1" />
-                  </li>
+                    <img src="img/canape_profil.jpeg" alt="photo6" />
+                  </li> 
                   <li>
                       <img src="img/table_profil.jpeg" alt="photo5" />
                   </li> 
                   <li>
                       <img src="img/table.jpeg" alt="photo6" />
                   </li> 
+                  <li>
+                    <img src="img/jouets.jpeg" alt="photo6" />
+                  </li> 
+                  <li>
+                    <img src="img/bureau_front.jpeg" alt="photo1" />
+                  </li>
               </ul>  
           </div>
       </div>
