--- a/index.html
+++ b/index.html
@@ -200,7 +200,13 @@
         <img class="rond trois" alt="feuilles" src="img/menu.jpg" />
       </div>
   </div>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-208309182-2"></script>
   <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-208309182-2');
   jQuery(document).ready(function ($) {
     var slideCount = $('#slider ul li').length;
     var slideWidth = $('#slider ul li').width();
