--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                 <span class="inline_b">
                     <span class="contact the">Immeuble "Femmes d'un siècle" </span>
                     <br />
-                    <span class="contact the">local 5 - 1er étage</span>
+                    <span class="contact the">2ème étage - Bureau 18</span>
                     <br />
                     <span class="contact the">3, Boulevard Jacques Duclos</span>
                     <br />
