--- a/index.html
+++ b/index.html
@@ -46,25 +46,53 @@
           <li class="li_pc"><a id="cont" href="#contact" class="a under">CONTACT</a></li>
       </ul>
   </div>
+  <video id="video" autoplay muted playsinline loop>
+    <source src="./img/lavande.mp4" type=video/mp4>
+  </video>
   <div id="background" class="background">
-        <div class="inside">
-          <a href="#" ><img class="docto2"  alt="doctolib" src="img/doctolib.jpg" /></a>
-            <div class=in>
-                <div class="name">
-                    <img class="symbole" alt="symbole psychologue" src="img/symbole.jpg" />
-                    <p class="cabinet">CABINET</p>
-                    <h1 class="name_psy">CHARLOTTE DURAND</h1>
-                    <h2 class="psycho1 top">- PSYCHOLOGUE CLINICIENNE -</h2>
-                    <h2 class="psycho2">- PSYCHOTHERAPEUTE -</h2>
-                    <h3 class="top"><i>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</i></h3>
-                </div>
-                <div class="adresse">
-                    <p>40220 TARNOS</p>
-                    <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
-                </div> 
-                <img class="rond trois smaller_pic none" alt="feuilles" src="img/menu.jpg" /> 
+   
+    <div class="inside">
+      <a href="#" ><img class="docto2"  alt="doctolib" src="img/doctolib.jpg" /></a>
+        <div class=in>
+            <div class="name">
+                <img class="symbole" alt="symbole psychologue" src="img/symbole.jpg" />
+                <p class="cabinet">CABINET</p>
+                <h1 class="name_psy">CHARLOTTE DURAND</h1>
+                <h2 class="psycho1 top">- 
+                  <div>P</div>
+                  <div>S</div>
+                  <div>Y</div>
+                  <div>C</div>
+                  <div>H</div>
+                  <div>O</div>
+                  <div>L</div>
+                  <div>O</div>
+                  <div>G</div>
+                  <div>U</div>
+                  <div>E</div>
+                  <div class="space"> </div>
+                  <div>C</div>
+                  <div>L</div>
+                  <div>I</div>
+                  <div>N</div>
+                  <div>I</div>
+                  <div>C</div>
+                  <div>I</div>
+                  <div>E</div>
+                  <div>N</div>
+                  <div>N</div>
+                  <div>E</div>
+                  - </h2>
+                <h2 class="psycho2">- PSYCHOTHERAPEUTE -</h2>
+                <h3 class="top"><i>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</i></h3>
             </div>
+            <div class="adresse">
+                <p>40220 TARNOS</p>
+                <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
+            </div> 
+            <img class="rond trois smaller_pic none" alt="feuilles" src="img/menu.jpg" /> 
         </div>
+    </div>  
   </div>
   <br />
   
@@ -93,7 +121,7 @@
         <div id="therapie">
           <h3 class="title">THERAPIES</h3>
           <hr />
-          <div class="englobe">
+          <div class="englobetherapie">
               <div class="flex">
                   <div class="child">
                       <h4 class="under_title">ENFANTS</h4>
