--- a/index.html
+++ b/index.html
@@ -52,46 +52,47 @@
   <div id="background" class="background">
    
     <div class="inside">
-      <a href="#" ><img class="docto2"  alt="doctolib" src="img/doctolib.jpg" /></a>
-        <div class=in>
-            <div class="name">
-                <img class="symbole" alt="symbole psychologue" src="img/symbole.jpg" />
-                <p class="cabinet">CABINET</p>
-                <h1 class="name_psy">CHARLOTTE DURAND</h1>
-                <h2 class="psycho1 top">- 
-                  <div>P</div>
-                  <div>S</div>
-                  <div>Y</div>
-                  <div>C</div>
-                  <div>H</div>
-                  <div>O</div>
-                  <div>L</div>
-                  <div>O</div>
-                  <div>G</div>
-                  <div>U</div>
-                  <div>E</div>
-                  <div class="space"> </div>
-                  <div>C</div>
-                  <div>L</div>
-                  <div>I</div>
-                  <div>N</div>
-                  <div>I</div>
-                  <div>C</div>
-                  <div>I</div>
-                  <div>E</div>
-                  <div>N</div>
-                  <div>N</div>
-                  <div>E</div>
-                  - </h2>
-                <h2 class="psycho2">- PSYCHOTHERAPEUTE -</h2>
-                <h3 class="top"><i>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</i></h3>
-            </div>
-            <div class="adresse">
-                <p>40220 TARNOS</p>
-                <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
-            </div> 
-            <img class="rond trois smaller_pic none" alt="feuilles" src="img/menu.jpg" /> 
+      <a href="https://www.doctolib.fr/psychologue/tarnos/charlotte-durand?utm_campaign=website-button&utm_source=charlotte-durand-website-button&utm_medium=referral&utm_content=option-2&utm_term=charlotte-durand" ><img class="docto2"  alt="doctolib" src="img/doctolib.jpg" /></a>
+      <div class=in>
+          <div class="name">
+              <img class="symbole" alt="symbole psychologue" src="img/symbole.jpg" />
+              <p class="cabinet">CABINET</p>
+              <h1 class="name_psy">CHARLOTTE DURAND</h1>
+              <h2 class="psycho1 top">- 
+                <div>P</div>
+                <div>S</div>
+                <div>Y</div>
+                <div>C</div>
+                <div>H</div>
+                <div>O</div>
+                <div>L</div>
+                <div>O</div>
+                <div>G</div>
+                <div>U</div>
+                <div>E</div>
+                <div class="space"> </div>
+                <div>C</div>
+                <div>L</div>
+                <div>I</div>
+                <div>N</div>
+                <div>I</div>
+                <div>C</div>
+                <div>I</div>
+                <div>E</div>
+                <div>N</div>
+                <div>N</div>
+                <div>E</div>
+                - </h2>
+              <h2 class="psycho2">- PSYCHOTHERAPEUTE -</h2>
+              <h3 class="top"><i>NOURRISSONS / ENFANTS / ADOLESCENTS / ADULTES / PARENTALITE</i></h3>
+          </div>
+          <div class="adresse">
+              <p>40220 TARNOS</p>
+              <a class="a_button" href="#contact"><button class="button_acc">Contact</button></a>
+          </div> 
+          <img class="rond trois smaller_pic none" alt="feuilles" src="img/menu.jpg" /> 
         </div>
+      </div>
     </div>  
   </div>
   <br />
